src/main/antlr4/.antlr/DelphiParser.java
// Generated from /Users/abhayshastry/Desktop/PLP/PascalAntlr4Grammar/src/main/antlr4/Delphi.g4 by ANTLR 4.13.1

package com.compiler.delphi;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DelphiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, ARRAY=2, BEGIN=3, BOOLEAN=4, CASE=5, CHAR=6, CHR=7, CONST=8, DIV=9, 
		DO=10, DOWNTO=11, ELSE=12, END=13, FILE=14, FOR=15, FUNCTION=16, GOTO=17, 
		IF=18, IN=19, INTEGER=20, LABEL=21, MOD=22, NIL=23, NOT=24, OF=25, OR=26, 
		PACKED=27, PROCEDURE=28, PROGRAM=29, REAL=30, RECORD=31, REPEAT=32, SET=33, 
		THEN=34, TO=35, TYPE=36, UNTIL=37, VAR=38, WHILE=39, WITH=40, CLASS=41, 
		PRIVATE=42, PUBLIC=43, PROTECTED=44, CONSTRUCTOR=45, DESTRUCTOR=46, INHERITS=47, 
		PLUS=48, MINUS=49, STAR=50, SLASH=51, ASSIGN=52, COMMA=53, SEMI=54, COLON=55, 
		EQUAL=56, NOT_EQUAL=57, LT=58, LE=59, GE=60, GT=61, LPAREN=62, RPAREN=63, 
		LBRACK=64, LBRACK2=65, RBRACK=66, RBRACK2=67, POINTER=68, AT=69, DOT=70, 
		DOTDOT=71, LCURLY=72, RCURLY=73, UNIT=74, INTERFACE=75, USES=76, STRING=77, 
		IMPLEMENTATION=78, TRUE=79, FALSE=80, WS=81, COMMENT_1=82, COMMENT_2=83, 
		IDENT=84, STRING_LITERAL=85, NUM_INT=86, NUM_REAL=87;
	public static final int
		RULE_program = 0, RULE_programHeading = 1, RULE_identifier = 2, RULE_block = 3, 
		RULE_classDeclarationPart = 4, RULE_className = 5, RULE_baseClassName = 6, 
		RULE_classBlock = 7, RULE_visibilitySection = 8, RULE_classVarDeclaration = 9, 
		RULE_methodDeclaration = 10, RULE_constructorDeclaration = 11, RULE_destructorDeclaration = 12, 
		RULE_classMethodDeclaration = 13, RULE_classMethodImplementation = 14, 
		RULE_constructorImplementation = 15, RULE_destructorImplementation = 16, 
		RULE_methodImplementation = 17, RULE_usesUnitsPart = 18, RULE_labelDeclarationPart = 19, 
		RULE_label = 20, RULE_constantDefinitionPart = 21, RULE_constantDefinition = 22, 
		RULE_constantChr = 23, RULE_constant = 24, RULE_unsignedNumber = 25, RULE_unsignedInteger = 26, 
		RULE_unsignedReal = 27, RULE_sign = 28, RULE_bool_ = 29, RULE_string = 30, 
		RULE_typeDefinitionPart = 31, RULE_typeDefinition = 32, RULE_functionType = 33, 
		RULE_procedureType = 34, RULE_type_ = 35, RULE_simpleType = 36, RULE_scalarType = 37, 
		RULE_subrangeType = 38, RULE_typeIdentifier = 39, RULE_structuredType = 40, 
		RULE_unpackedStructuredType = 41, RULE_stringtype = 42, RULE_arrayType = 43, 
		RULE_typeList = 44, RULE_indexType = 45, RULE_componentType = 46, RULE_recordType = 47, 
		RULE_fieldList = 48, RULE_fixedPart = 49, RULE_recordSection = 50, RULE_variantPart = 51, 
		RULE_tag = 52, RULE_variant = 53, RULE_setType = 54, RULE_baseType = 55, 
		RULE_fileType = 56, RULE_pointerType = 57, RULE_variableDeclarationPart = 58, 
		RULE_variableDeclaration = 59, RULE_procedureAndFunctionDeclarationPart = 60, 
		RULE_procedureOrFunctionDeclaration = 61, RULE_procedureDeclaration = 62, 
		RULE_formalParameterList = 63, RULE_formalParameterSection = 64, RULE_parameterGroup = 65, 
		RULE_identifierList = 66, RULE_constList = 67, RULE_functionDeclaration = 68, 
		RULE_resultType = 69, RULE_statement = 70, RULE_unlabelledStatement = 71, 
		RULE_simpleStatement = 72, RULE_assignmentStatement = 73, RULE_variable = 74, 
		RULE_expression = 75, RULE_relationaloperator = 76, RULE_simpleExpression = 77, 
		RULE_additiveoperator = 78, RULE_term = 79, RULE_multiplicativeoperator = 80, 
		RULE_signedFactor = 81, RULE_factor = 82, RULE_unsignedConstant = 83, 
		RULE_functionDesignator = 84, RULE_parameterList = 85, RULE_set_ = 86, 
		RULE_elementList = 87, RULE_element = 88, RULE_procedureStatement = 89, 
		RULE_actualParameter = 90, RULE_parameterwidth = 91, RULE_gotoStatement = 92, 
		RULE_emptyStatement_ = 93, RULE_empty_ = 94, RULE_structuredStatement = 95, 
		RULE_compoundStatement = 96, RULE_statements = 97, RULE_conditionalStatement = 98, 
		RULE_ifStatement = 99, RULE_caseStatement = 100, RULE_caseListElement = 101, 
		RULE_repetetiveStatement = 102, RULE_whileStatement = 103, RULE_repeatStatement = 104, 
		RULE_forStatement = 105, RULE_forList = 106, RULE_initialValue = 107, 
		RULE_finalValue = 108, RULE_withStatement = 109, RULE_recordVariableList = 110;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programHeading", "identifier", "block", "classDeclarationPart", 
			"className", "baseClassName", "classBlock", "visibilitySection", "classVarDeclaration", 
			"methodDeclaration", "constructorDeclaration", "destructorDeclaration", 
			"classMethodDeclaration", "classMethodImplementation", "constructorImplementation", 
			"destructorImplementation", "methodImplementation", "usesUnitsPart", 
			"labelDeclarationPart", "label", "constantDefinitionPart", "constantDefinition", 
			"constantChr", "constant", "unsignedNumber", "unsignedInteger", "unsignedReal", 
			"sign", "bool_", "string", "typeDefinitionPart", "typeDefinition", "functionType", 
			"procedureType", "type_", "simpleType", "scalarType", "subrangeType", 
			"typeIdentifier", "structuredType", "unpackedStructuredType", "stringtype", 
			"arrayType", "typeList", "indexType", "componentType", "recordType", 
			"fieldList", "fixedPart", "recordSection", "variantPart", "tag", "variant", 
			"setType", "baseType", "fileType", "pointerType", "variableDeclarationPart", 
			"variableDeclaration", "procedureAndFunctionDeclarationPart", "procedureOrFunctionDeclaration", 
			"procedureDeclaration", "formalParameterList", "formalParameterSection", 
			"parameterGroup", "identifierList", "constList", "functionDeclaration", 
			"resultType", "statement", "unlabelledStatement", "simpleStatement", 
			"assignmentStatement", "variable", "expression", "relationaloperator", 
			"simpleExpression", "additiveoperator", "term", "multiplicativeoperator", 
			"signedFactor", "factor", "unsignedConstant", "functionDesignator", "parameterList", 
			"set_", "elementList", "element", "procedureStatement", "actualParameter", 
			"parameterwidth", "gotoStatement", "emptyStatement_", "empty_", "structuredStatement", 
			"compoundStatement", "statements", "conditionalStatement", "ifStatement", 
			"caseStatement", "caseListElement", "repetetiveStatement", "whileStatement", 
			"repeatStatement", "forStatement", "forList", "initialValue", "finalValue", 
			"withStatement", "recordVariableList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'AND'", "'ARRAY'", "'BEGIN'", "'BOOLEAN'", "'CASE'", "'CHAR'", 
			"'CHR'", "'CONST'", "'DIV'", "'DO'", "'DOWNTO'", "'ELSE'", "'END'", "'FILE'", 
			"'FOR'", "'FUNCTION'", "'GOTO'", "'IF'", "'IN'", "'INTEGER'", "'LABEL'", 
			"'MOD'", "'NIL'", "'NOT'", "'OF'", "'OR'", "'PACKED'", "'PROCEDURE'", 
			"'PROGRAM'", "'REAL'", "'RECORD'", "'REPEAT'", "'SET'", "'THEN'", "'TO'", 
			"'TYPE'", "'UNTIL'", "'VAR'", "'WHILE'", "'WITH'", "'CLASS'", "'PRIVATE'", 
			"'PUBLIC'", "'PROTECTED'", "'CONSTRUCTOR'", "'DESTRUCTOR'", "'INHERITS'", 
			"'+'", "'-'", "'*'", "'/'", "':='", "','", "';'", "':'", "'='", "'<>'", 
			"'<'", "'<='", "'>='", "'>'", "'('", "')'", "'['", "'(.'", "']'", "'.)'", 
			"'^'", "'@'", "'.'", "'..'", "'{'", "'}'", "'UNIT'", "'INTERFACE'", "'USES'", 
			"'STRING'", "'IMPLEMENTATION'", "'TRUE'", "'FALSE'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AND", "ARRAY", "BEGIN", "BOOLEAN", "CASE", "CHAR", "CHR", "CONST", 
			"DIV", "DO", "DOWNTO", "ELSE", "END", "FILE", "FOR", "FUNCTION", "GOTO", 
			"IF", "IN", "INTEGER", "LABEL", "MOD", "NIL", "NOT", "OF", "OR", "PACKED", 
			"PROCEDURE", "PROGRAM", "REAL", "RECORD", "REPEAT", "SET", "THEN", "TO", 
			"TYPE", "UNTIL", "VAR", "WHILE", "WITH", "CLASS", "PRIVATE", "PUBLIC", 
			"PROTECTED", "CONSTRUCTOR", "DESTRUCTOR", "INHERITS", "PLUS", "MINUS", 
			"STAR", "SLASH", "ASSIGN", "COMMA", "SEMI", "COLON", "EQUAL", "NOT_EQUAL", 
			"LT", "LE", "GE", "GT", "LPAREN", "RPAREN", "LBRACK", "LBRACK2", "RBRACK", 
			"RBRACK2", "POINTER", "AT", "DOT", "DOTDOT", "LCURLY", "RCURLY", "UNIT", 
			"INTERFACE", "USES", "STRING", "IMPLEMENTATION", "TRUE", "FALSE", "WS", 
			"COMMENT_1", "COMMENT_2", "IDENT", "STRING_LITERAL", "NUM_INT", "NUM_REAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Delphi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DelphiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeadingContext programHeading() {
			return getRuleContext(ProgramHeadingContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(DelphiParser.DOT, 0); }
		public TerminalNode EOF() { return getToken(DelphiParser.EOF, 0); }
		public TerminalNode INTERFACE() { return getToken(DelphiParser.INTERFACE, 0); }
		public List<ClassDeclarationPartContext> classDeclarationPart() {
			return getRuleContexts(ClassDeclarationPartContext.class);
		}
		public ClassDeclarationPartContext classDeclarationPart(int i) {
			return getRuleContext(ClassDeclarationPartContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(222);
			programHeading();
			setState(224);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INTERFACE) {
				{
				setState(223);
				match(INTERFACE);
				}
			}

			setState(229);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS) {
				{
				{
				setState(226);
				classDeclarationPart();
				}
				}
				setState(231);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(232);
			block();
			setState(233);
			match(DOT);
			setState(234);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramHeadingContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(DelphiParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(DelphiParser.SEMI, 0); }
		public TerminalNode LPAREN() { return getToken(DelphiParser.LPAREN, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(DelphiParser.RPAREN, 0); }
		public TerminalNode UNIT() { return getToken(DelphiParser.UNIT, 0); }
		public ProgramHeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeading; }
	}

	public final ProgramHeadingContext programHeading() throws RecognitionException {
		ProgramHeadingContext _localctx = new ProgramHeadingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeading);
		int _la;
		try {
			setState(250);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PROGRAM:
				enterOuterAlt(_localctx, 1);
				{
				setState(236);
				match(PROGRAM);
				setState(237);
				identifier();
				setState(242);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(238);
					match(LPAREN);
					setState(239);
					identifierList();
					setState(240);
					match(RPAREN);
					}
				}

				setState(244);
				match(SEMI);
				}
				break;
			case UNIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(246);
				match(UNIT);
				setState(247);
				identifier();
				setState(248);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(DelphiParser.IDENT, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(252);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public List<LabelDeclarationPartContext> labelDeclarationPart() {
			return getRuleContexts(LabelDeclarationPartContext.class);
		}
		public LabelDeclarationPartContext labelDeclarationPart(int i) {
			return getRuleContext(LabelDeclarationPartContext.class,i);
		}
		public List<ConstantDefinitionPartContext> constantDefinitionPart() {
			return getRuleContexts(ConstantDefinitionPartContext.class);
		}
		public ConstantDefinitionPartContext constantDefinitionPart(int i) {
			return getRuleContext(ConstantDefinitionPartContext.class,i);
		}
		public List<TypeDefinitionPartContext> typeDefinitionPart() {
			return getRuleContexts(TypeDefinitionPartContext.class);
		}
		public TypeDefinitionPartContext typeDefinitionPart(int i) {
			return getRuleContext(TypeDefinitionPartContext.class,i);
		}
		public List<VariableDeclarationPartContext> variableDeclarationPart() {
			return getRuleContexts(VariableDeclarationPartContext.class);
		}
		public VariableDeclarationPartContext variableDeclarationPart(int i) {
			return getRuleContext(VariableDeclarationPartContext.class,i);
		}
		public List<ProcedureAndFunctionDeclarationPartContext> procedureAndFunctionDeclarationPart() {
			return getRuleContexts(ProcedureAndFunctionDeclarationPartContext.class);
		}
		public ProcedureAndFunctionDeclarationPartContext procedureAndFunctionDeclarationPart(int i) {
			return getRuleContext(ProcedureAndFunctionDeclarationPartContext.class,i);
		}
		public List<ClassMethodImplementationContext> classMethodImplementation() {
			return getRuleContexts(ClassMethodImplementationContext.class);
		}
		public ClassMethodImplementationContext classMethodImplementation(int i) {
			return getRuleContext(ClassMethodImplementationContext.class,i);
		}
		public List<UsesUnitsPartContext> usesUnitsPart() {
			return getRuleContexts(UsesUnitsPartContext.class);
		}
		public UsesUnitsPartContext usesUnitsPart(int i) {
			return getRuleContext(UsesUnitsPartContext.class,i);
		}
		public List<TerminalNode> IMPLEMENTATION() { return getTokens(DelphiParser.IMPLEMENTATION); }
		public TerminalNode IMPLEMENTATION(int i) {
			return getToken(DelphiParser.IMPLEMENTATION, i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}
